[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/UI/ButtonTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.752941, 0.858824, 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_right = 1924.0
margin_bottom = 1083.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -116.5
margin_top = -172.0
margin_right = 116.5
margin_bottom = 172.0

[node name="Resume" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 233.0
text = "Resume"

[node name="Restart" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 80.0
margin_right = 233.0
margin_bottom = 156.0
text = "Restart"

[node name="Options" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 160.0
margin_right = 233.0
margin_bottom = 236.0
text = "Options"

[node name="Exit" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 240.0
margin_right = 233.0
margin_bottom = 316.0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
